# crewai-mcp-poc

./: README.md  pyproject.toml
src/crew_ai_mcp_poc/: crew.py  main.py  main_streamlit.py  mcp_context.py
src/crew_ai_mcp_poc/config/: agents.yaml  tasks.yaml
src/crew_ai_mcp_poc/servers/: context_server.py
src/crew_ai_mcp_poc/tools/: mcp_adapter.py
