[project]
name = "crew_ai_mcp_poc"
version = "0.1.0"
description = "crew_ai_mcp_poc using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3>=1.38.23",
    "crewai[tools]>=0.121.0,<1.0.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
]

[project.scripts]
crew_ai_mcp_poc = "crew_ai_mcp_poc.main:run"
run_crew = "crew_ai_mcp_poc.main:run"
train = "crew_ai_mcp_poc.main:train"
replay = "crew_ai_mcp_poc.main:replay"
test = "crew_ai_mcp_poc.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
